--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : benlansdell
+  linkedin         : Dk-Dileep
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
