--- a/_config.yml
+++ b/_config.yml
@@ -71,14 +71,14 @@ author:
   codepen          :
   dribbble         :
   # flickr           : 149922637@N08
-  facebook         : DileepKumar
+  # facebook         : DileepKumar
   foursquare       :
   github           : DileepKumarIrri
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : Dk-Dileep
+  linkedin         : dk-dileep
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
