--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   avatar           : "Professional.jpg"
   bio              : "CyberWarrior & Machine Learning Engineer "
   location         : "Kotabommali"
-  email            : "dileepkumarirr0@gmail.com"
+  email            : "dileepkumarirri0@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
