--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ google_ad_slot           :
 author:
   name             : "Dileep Kumar"
   avatar           : "Professional.jpg"
-  bio              : "CyberWarrior & Machine Learning Engineer "
+  bio              : "Machine Learning Engineer & CyberWarrior"
   location         : "Kotabommali"
   email            : "dileepkumarirri0@gmail.com"
   uri              :
